--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "html-loader-jest": "^0.2.1",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
+    "prerender-spa-plugin-next": "^4.2.0",
     "terser-webpack-plugin": "^5.3.1",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^5.72.0",
