--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,7 @@ jobs:
             - ".git/*"
             - ".circleci/*"
             - "src/*"
+            - "environments/*"
 
   format:
     <<: *defaults
